--- a/app/src/main/res/layout/view_article_url.xml
+++ b/app/src/main/res/layout/view_article_url.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,18 +10,16 @@
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{article.title}" />
-        <include
-            layout="@layout/view_article_url"
-            bind:article="@{article}"/>
+            android:text="@{article.url}"
+            tools:text="url" />
+
     </LinearLayout>
 
 </layout>
